[gd_scene load_steps=3 format=3 uid="uid://moonrtsmain"]

[ext_resource type="Script" path="res://scripts/core/main.gd" id="1_main"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="World" type="Node2D" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="PanelContainer" parent="UILayer/HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 44.0
grow_horizontal = 2

[node name="HBox" type="HBoxContainer" parent="UILayer/HUD/TopBar"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="UILayer/HUD/TopBar/HBox"]
layout_mode = 2
text = "Moon RTS"

[node name="Spacer" type="Control" parent="UILayer/HUD/TopBar/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TicksLabel" type="Label" parent="UILayer/HUD/TopBar/HBox"]
layout_mode = 2
text = "Ticks: 0"

[node name="ResourcesLabel" type="Label" parent="UILayer/HUD/TopBar/HBox"]
layout_mode = 2
text = "Resources"
